--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-rc.0",
+    "@lexical/code": "0.38.2",
+    "@lexical/history": "0.38.2",
+    "@lexical/link": "0.38.2",
+    "@lexical/list": "0.38.2",
+    "@lexical/markdown": "0.38.2",
+    "@lexical/react": "0.38.2",
+    "@lexical/rich-text": "0.38.2",
+    "@lexical/selection": "0.38.2",
+    "@lexical/table": "0.38.2",
+    "@lexical/utils": "0.38.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lexical": "0.38.2",
+    "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
@@ -20,7 +36,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
