--- a/package.json
+++ b/package.json
@@ -11,34 +11,35 @@
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-rc.0",
-    "@lexical/code": "0.38.2",
-    "@lexical/history": "0.38.2",
-    "@lexical/link": "0.38.2",
-    "@lexical/list": "0.38.2",
-    "@lexical/markdown": "0.38.2",
-    "@lexical/react": "0.38.2",
-    "@lexical/rich-text": "0.38.2",
-    "@lexical/selection": "0.38.2",
-    "@lexical/table": "0.38.2",
-    "@lexical/utils": "0.38.2",
+    "@lexical/code": "0.39.0",
+    "@lexical/history": "0.39.0",
+    "@lexical/link": "0.39.0",
+    "@lexical/list": "0.39.0",
+    "@lexical/markdown": "0.39.0",
+    "@lexical/react": "0.39.0",
+    "@lexical/rich-text": "0.39.0",
+    "@lexical/selection": "0.39.0",
+    "@lexical/table": "0.39.0",
+    "@lexical/utils": "0.39.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lexical": "0.38.2",
-    "lucide-react": "^0.556.0",
-    "next": "16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "lexical": "0.39.0",
+    "lucide": "^0.561.0",
+    "lucide-react": "^0.561.0",
+    "next": "16.0.10",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@biomejs/biome": "2.3.8",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "^1.0.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
